# shah-visual

./: .gitignore  Cargo.toml  README.md
src/: app.rs  config.rs  database.rs  error.rs  fonts.rs  main.rs  shortcuts.rs  tiles.rs  utils.rs
src/db/: entity.rs  mod.rs  show_schema.rs  trie_const.rs
src/db/entity/: field.rs  item.rs  mod.rs
src/old/: old-app.rs  old-db.rs  pond_app.rs
