[package]
name = "shah-visual"
version = "0.1.0"
edition = "2021"

[dependencies]
shah = { path = "../shah/shah" }

eframe = { version = "0.31", features = ["persistence"] }
egui = { version = "0.31", features = ["persistence", "color-hex"] }
egui_extras = { version = "0.31", features = ["all_loaders"] }
egui_tiles = { version = "0.12" }
egui-file-dialog = "0.9.0"

log = "0.4.22"
pretty_env_logger = "0.5.0"
